--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
             <!-- Bildraster -->
             <div class="grid grid-cols-2 gap-4 max-w-md mx-auto md:max-w-4xl">
                 <!-- Bilder mit Lazy Loading und srcset -->
-                <img data-src="IMG_01.webp" alt="Bild 1" class="lazy w-full h-40 object-cover rounded-lg shadow-lg" width="600" height="400">
-                <img data-src="IMG_02.webp" alt="Bild 2" class="lazy w-full h-40 object-cover rounded-lg shadow-lg" width="600" height="400">
-                <img data-src="IMG_03.webp" alt="Bild 3" class="lazy w-full h-40 object-cover rounded-lg shadow-lg" width="600" height="400">
-                <img data-src="IMG_004.webp" alt="Bild 4" class="lazy w-full h-40 object-cover rounded-lg shadow-lg" width="600" height="400">
+                <img data-src="IMG_01.webp" alt="Bild 1" class="lazy w-full h-40 md:h-80 object-cover rounded-lg shadow-lg" width="600" height="400">
+                <img data-src="IMG_02.webp" alt="Bild 2" class="lazy w-full h-40 md:h-80 object-cover rounded-lg shadow-lg" width="600" height="400">
+                <img data-src="IMG_03.webp" alt="Bild 3" class="lazy w-full h-40 md:h-80 object-cover rounded-lg shadow-lg" width="600" height="400">
+                <img data-src="IMG_004.webp" alt="Bild 4" class="lazy w-full h-40 md:h-80 object-cover rounded-lg shadow-lg" width="600" height="400">
             </div>
             <!-- Slogan und CTA -->
             <div class="mt-8 text-center">
-                <h1 class="text-3xl md:text-5xl font-bold text-gray-800">Ihre Momente - perfekt eingefangen.</h1>
-                <p class="mt-4 text-lg md:text-xl text-gray-600">Authentische Portrait- und Eventfotografie – Ihre Augenblicke für die Ewigkeit.</p>
+                <h1 class="text-3xl md:text-5xl font-bold text-gray-800 md:pt-8">Ihre Momente - perfekt eingefangen.</h1>
+                <p class="mt-4 text-lg md:text-xl text-gray-600 md:py-6">Authentische Portrait- und Eventfotografie – Ihre Augenblicke für die Ewigkeit.</p>
                 <a href="#contact" class="inline-block mt-6 px-6 py-3 border-2 border-red-500 text-red-500 bg-red-50 font-semibold rounded-full hover:bg-red-500 hover:text-white transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Buche dein Moment!</a>
             </div>
             <!-- Kurze Beschreibung der Services -->
@@ -100,9 +100,9 @@
     <section id="about" class="py-16 bg-white">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800">Über mich</h2>
-            <div class="mt-2 flex flex-col md:flex-row items-center">
+            <div class="mt-2 flex flex-col md:flex-row items-center md:items-center">
                 <!-- Textbereich -->
-                <div class="md:w-1/2 md:pr-6">
+                <div class="md:w-2/3 md:pr-6">
                     <p class="mt-6 text-gray-600">
                         Seit meiner Jugend beschäftige ich mich mit Fotografie und halte unvergessliche Momente fest – ob bei Porträts, Business-Shootings oder Events. Mit jedem Bild erzähle ich eine Geschichte und sorge dafür, dass Ihre Erinnerungen lebendig bleiben.
                     </p>
@@ -111,67 +111,87 @@
                     </p>
                 </div>
                 <!-- Bildbereich mit Lazy Loading -->
-                <div class="md:w-1/2 md:pl-6 mb-2 mt-6 md:mt-0">
-                    <img data-src="IMG_05.webp" alt="Fotograf" class="lazy rounded-lg shadow-lg w-full h-auto" width="600" height="400">
-                </div>
+                <div class="md:w-1/3 md:pl-6 mb-2 mt-6 md:mt-0">
+    			<img data-src="IMG_05.webp" alt="Fotograf" class="lazy rounded-lg shadow-lg w-auto h-auto md:max-h-96 object-cover width="600" height="400">
+		</div>
             </div>
         </div>
     </section>
 
-    <!-- Services Section -->
-    <section id="services" class="py-16 bg-gray-100">
-        <div class="container mx-auto px-4">
-            <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800">Service</h2>
-            <p class="mt-6 text-gray-600 max-w-2xl mx-auto">
-                Ob es der freudige Ausdruck eines Brautpaares, die lebendige Energie einer Feier oder das stille Lächeln eines Kindes ist – jedes Bild erzählt eine einzigartige Geschichte.
-            </p>
-            <div class="mt-12 space-y-12">
-                <!-- Service 1 -->
-                <div class="flex flex-col md:flex-row items-center">
-                    <div class="md:w-1/2">
-                        <img data-src="IMG_06.webp" alt="Business Fotografie" class="lazy rounded-lg shadow-lg w-full h-64 object-cover" width="600" height="400">
-                    </div>
-                    <div class="md:w-1/2 md:pl-8 mt-6 md:mt-0">
-                        <h3 class="text-2xl font-semibold mb-4">Business Fotografie</h3>
-                        <p class="text-gray-600 mb-4">
-                            Perfekt für professionelle Headshots, Teamfotos oder Produktfotos für Ihre Unternehmenswebsite.
-                        </p>
-                        <p class="text-gray-600 font-bold mb-4">Preis: ab 199.- EUR</p>
-                        <a href="#contact" class="px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
-                    </div>
-                </div>
-                <!-- Service 2 -->
-                <div class="flex flex-col md:flex-row items-center md:flex-row-reverse">
-                    <div class="md:w-1/2">
-                        <img data-src="IMG_07.webp" alt="Porträts & Events" class="lazy rounded-lg shadow-lg w-full h-64 object-cover" width="600" height="400">
-                    </div>
-                    <div class="md:w-1/2 md:pr-8 mt-6 md:mt-0">
-                        <h3 class="text-2xl font-semibold mb-4">Porträts & Events</h3>
-                        <p class="text-gray-600 mb-4">
-                            Porträt- und Eventfotografie für jegliche Anlässe, um unvergessliche Momente festzuhalten.
-                        </p>
-                        <p class="text-gray-600 font-bold mb-4">Preis: ab 299.- EUR</p>
-                        <!-- Tippfehler in der Klasse korrigiert -->
-                        <a href="#contact" class="px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
-                    </div>
-                </div>
-                <!-- Service 3 -->
-                <div class="flex flex-col md:flex-row items-center">
-                    <div class="md:w-1/2">
-                        <img data-src="IMG_08.webp" alt="Photoshop-Service" class="lazy rounded-lg shadow-lg w-full h-64 object-cover" width="600" height="400">
-                    </div>
-                    <div class="md:w-1/2 md:pl-8 mt-6 md:mt-0">
-                        <h3 class="text-2xl font-semibold mb-4">Photoshop-Service</h3>
-                        <p class="text-gray-600 mb-4">
-                            Detailreiche Retusche und Optimierung Ihrer Bilder, um das Beste aus jedem Foto herauszuholen.
-                        </p>
-                        <p class="text-gray-600 font-bold mb-4">Preis: ab 19.- EUR</p>
-                        <a href="#contact" class="px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
-                    </div>
-                </div>
+<section id="services" class="py-16 bg-gray-100">
+    <div class="container mx-auto px-4">
+        <h1 class="text-4xl font-bold text-center text-gray-800 mb-6">Service</h1>
+        <p class="text-center text-gray-600 mb-10">
+            Ob es der freudige Ausdruck eines Brautpaares, die lebendige Energie einer Feier oder das stille Lächeln eines Kindes ist – jedes Bild erzählt eine einzigartige Geschichte.
+        </p>
+
+        <!-- Services Container -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+
+            <!-- Business Fotografie Card -->
+            <div class="bg-white rounded-lg shadow-lg p-6">
+                <img 
+                    src="IMG_06.webp" 
+                    alt="Business Fotografie" 
+                    class="rounded-lg mb-4 w-full h-48 object-cover" 
+                >
+                <h2 class="text-2xl font-bold text-gray-800">Business Fotografie</h2>
+                <p class="text-gray-600 mb-4">
+                    Perfekt für professionelle Headshots, Teamfotos oder Produktfotos für Ihre Unternehmenswebsite.
+                </p>
+                <ul class="mt-4 text-gray-600">
+                    <li>✔ Headshots</li>
+                    <li>✔ Teamfotos</li>
+                    <li>✔ Produktfotos</li>
+                </ul>
+                <p class="mt-4 text-lg font-semibold">Preis: ab 199.-</p>
+                <a href="#contact" class="mt-4 inline-block px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
             </div>
+
+            <!-- Porträts & Events Card -->
+            <div class="bg-white rounded-lg shadow-lg p-6">
+                <img 
+                    src="IMG_07.webp" 
+                    alt="Porträts & Events" 
+                    class="rounded-lg mb-4 w-full h-48 object-cover" 
+                >
+                <h2 class="text-2xl font-bold text-gray-800">Porträts & Events</h2>
+                <p class="text-gray-600 mb-4">
+                    Porträt- und Eventfotografie für jegliche Anlässe, um unvergessliche Momente festzuhalten.
+
+                </p>
+                <ul class="mt-4 text-gray-600">
+                    <li>✔ Portraits</li>
+                    <li>✔ Feiern</li>
+                    <li>✔ Familienfotos</li>
+                </ul>
+                <p class="mt-4 text-lg font-semibold">Preis: ab 299.-</p>
+                <a href="#contact" class="mt-4 inline-block px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
+            </div>
+
+            <!-- Photoshop-Service Card -->
+            <div class="bg-white rounded-lg shadow-lg p-6">
+                <img 
+                    src="IMG_08.webp" 
+                    alt="Photoshop-Service" 
+                    class="rounded-lg mb-4 w-full h-48 object-cover" 
+                >
+                <h2 class="text-2xl font-bold text-gray-800">Photoshop-Service</h2>
+                <p class="text-gray-600 mb-4">
+                    Retusche und Optimierung Ihrer Bilder, um das Beste aus jedem Foto herauszuholen.
+                </p>
+                <ul class="mt-4 text-gray-600">
+                    <li>✔ Retusche</li>
+                    <li>✔ Weboptimierung</li>
+                    <li>✔ Bearbeitung</li>
+                </ul>
+                <p class="mt-4 text-lg font-semibold">Preis: ab 19.-</p>
+                <a href="#contact" class="mt-4 inline-block px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
+            </div>
+
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="py-16 bg-white">
@@ -191,24 +211,24 @@
             <div class="mt-10 grid grid-cols-2 md:grid-cols-4 gap-4">
                 <!-- Business Bilder -->
                 <div class="portfolio-item category-business">
-                    <img data-src="IMG_11.webp" alt="Business Bild 1" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
+                    <img data-src="IMG_11.webp" alt="Business Bild 1" class="lazy rounded-lg shadow-lg w-full h-64 md:max-h-96 object-cover" width="600" height="400">
                 </div>
                 <div class="portfolio-item category-business">
-                    <img data-src="IMG_06.webp" alt="Business Bild 2" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
+                    <img data-src="IMG_06.webp" alt="Business Bild 2" class="lazy rounded-lg shadow-lg w-full h-64 md:max-h-96 object-cover" width="600" height="400">
                 </div>
                 <!-- Porträts Bilder -->
                 <div class="portfolio-item category-portraits">
-                    <img data-src="IMG_09.webp" alt="Porträt Bild 1" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
+                    <img data-src="IMG_09.webp" alt="Porträt Bild 1" class="lazy rounded-lg shadow-lg w-full h-64 md:max-h-96 object-cover" width="600" height="400">
                 </div>
                 <div class="portfolio-item category-portraits">
-                    <img data-src="IMG_05.webp" alt="Porträt Bild 2" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
+                    <img data-src="IMG_05.webp" alt="Porträt Bild 2" class="lazy rounded-lg shadow-lg w-full h-64 md:max-h-96 object-cover" width="600" height="400">
                 </div>
                 <!-- Events Bilder -->
                 <div class="portfolio-item category-events">
-                    <img data-src="IMG_07.webp" alt="Event Bild 1" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
+                    <img data-src="IMG_07.webp" alt="Event Bild 1" class="lazy rounded-lg shadow-lg w-full h-64 md:max-h-96 object-cover" width="600" height="400">
                 </div>
                 <div class="portfolio-item category-events">
-                    <img data-src="IMG_08.webp" alt="Event Bild 2" class="lazy rounded-lg shadow-lg w-full h-40 object-cover" width="600" height="400">
+                    <img data-src="IMG_08.webp" alt="Event Bild 2" class="lazy rounded-lg shadow-lg w-full h-64 md:max-h-96 object-cover" width="600" height="400">
                 </div>
                 <!-- Weitere Bilder hinzufügen -->
             </div>
