--- a/index.html
+++ b/index.html
@@ -33,13 +33,8 @@
     <!-- Preload für LCP-Bild -->
     <link rel="preload" as="image" href="IMG_01.webp" type="image/webp">
 
-    <!-- Content Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="
-        default-src 'self';
-        script-src 'self' https://cdnjs.cloudflare.com;
-        style-src 'self' https://cdnjs.cloudflare.com;
-        img-src 'self' data:;
-        font-src 'self' https://cdnjs.cloudflare.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; img-src 'self' data:; font-src 'self' https://cdnjs.cloudflare.com;">
+
 
 
     <!-- Smooth Scroll Behavior -->
