--- a/index.html
+++ b/index.html
@@ -218,24 +218,24 @@
                 <div class="mt-10 grid grid-cols-2 md:grid-cols-4 gap-4">
                     <!-- Business Bilder -->
                     <div class="portfolio-item category-business">
-                        <img src="IMG_11-small.webp" data-src="IMG_11.webp" alt="Business Bild 1" class="lazy rounded-lg shadow-lg w-full h-auto max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img src="IMG_11-small.webp" data-src="IMG_11.webp" alt="Business Bild 1" class="lazy rounded-lg shadow-lg w-full max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
                     </div>
                     <div class="portfolio-item category-business">
-                        <img src="IMG_06-small.webp" data-src="IMG_06.webp" alt="Business Bild 2" class="lazy rounded-lg shadow-lg w-full h-auto max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img src="IMG_06-small.webp" data-src="IMG_06.webp" alt="Business Bild 2" class="lazy rounded-lg shadow-lg w-full max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
                     </div>
                     <!-- Porträts Bilder -->
                     <div class="portfolio-item category-portraits">
-                        <img src="IMG_09-small.webp" data-src="IMG_09.webp" alt="Porträt Bild 1" class="lazy rounded-lg shadow-lg w-full h-auto max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img src="IMG_09-small.webp" data-src="IMG_09.webp" alt="Porträt Bild 1" class="lazy rounded-lg shadow-lg w-full max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
                     </div>
                     <div class="portfolio-item category-portraits">
-                        <img src="IMG_05-small.webp" data-src="IMG_05.webp" alt="Porträt Bild 2" class="lazy rounded-lg shadow-lg w-full h-auto max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img src="IMG_05-small.webp" data-src="IMG_05.webp" alt="Porträt Bild 2" class="lazy rounded-lg shadow-lg w-full max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
                     </div>
                     <!-- Events Bilder -->
                     <div class="portfolio-item category-events">
-                        <img src="IMG_07-small.webp" data-src="IMG_07.webp" alt="Event Bild 1" class="lazy rounded-lg shadow-lg w-full h-auto max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img src="IMG_07-small.webp" data-src="IMG_07.webp" alt="Event Bild 1" class="lazy rounded-lg shadow-lg w-full max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
                     </div>
                     <div class="portfolio-item category-events">
-                        <img src="IMG_08-small.webp" data-src="IMG_08.webp" alt="Event Bild 2" class="lazy rounded-lg shadow-lg w-full h-auto max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img src="IMG_08-small.webp" data-src="IMG_08.webp" alt="Event Bild 2" class="lazy rounded-lg shadow-lg w-full max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
                     </div>
                     <!-- Weitere Bilder hinzufügen -->
                 </div>
