index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
 
     <!-- Externes CSS asynchron laden -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
-
 
     <!-- Tailwind CSS kompiliert und minimiert -->
     <link rel="stylesheet" href="styles.css">
-
 
     <!-- Preconnect für Performance -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
@@ -85,7 +82,7 @@
                 <!-- Bildraster -->
                 <div class="grid grid-cols-2 gap-4 max-w-md mx-auto md:max-w-4xl">
                     <!-- Bilder mit Lazy Loading und srcset -->
-                    <img src="IMG_01-small.webp" data-src="IMG_01.webp" alt="Bild 1" class="lazy w-full h-40 md:h-80 object-cover rounded-lg shadow-lg" width="600" height="400" loading="lazy">
+                    <img src="IMG_01.webp" data-src="IMG_01.webp" alt="Bild 1" class="lazy w-full h-40 md:h-80 object-cover rounded-lg shadow-lg" width="600" height="400">
                     <img src="IMG_02-small.webp" data-src="IMG_02.webp" alt="Bild 2" class="lazy w-full h-40 md:h-80 object-cover rounded-lg shadow-lg" width="600" height="400" loading="lazy">
                     <img src="IMG_03-small.webp" data-src="IMG_03.webp" alt="Bild 3" class="lazy w-full h-40 md:h-80 object-cover rounded-lg shadow-lg" width="600" height="400" loading="lazy">
                     <img src="IMG_004-small.webp" data-src="IMG_004.webp" alt="Bild 4" class="lazy w-full h-40 md:h-80 object-cover rounded-lg shadow-lg" width="600" height="400" loading="lazy">
