index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -182,7 +182,15 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-12">
                     <!-- Business Fotografie Card -->
                     <div class="bg-white rounded-lg shadow-lg p-6">
-                        <img src="IMG_06-small.webp" data-src="IMG_06.webp" alt="Business Fotografie" class="lazy rounded-lg mb-4 w-full h-48 object-cover" width="600" height="400" loading="lazy">
+                        <img 
+                            src="IMG_06-small.webp" 
+                            srcset="IMG_06-small.webp 600w, IMG_06.webp 1200w" 
+                            sizes="(max-width: 768px) 100vw, 33vw" 
+                            alt="Business Fotografie" 
+                            class="lazy rounded-lg mb-4 w-full h-48 object-cover" 
+                            width="600" 
+                            height="400" 
+                            loading="lazy">
                         <h3 class="text-2xl font-bold text-gray-800">Business Fotografie</h3>
                         <p class="text-gray-700 mb-4">
                             Perfekt für professionelle Headshots, Teamfotos oder Produktfotos für Ihre Unternehmenswebsite.
@@ -192,13 +200,21 @@
                             <li>✔ Teamfotos</li>
                             <li>✔ Produktfotos</li>
                         </ul>
-                        <p class="mt-4 text-lg font-semibold">Preis: ab 199.-</p>
+                        <p class="mt-4 text-lg font-semibold">Preis: ab 199.- EUR</p>
                         <a href="#contact" class="mt-4 inline-block px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
                     </div>
 
                     <!-- Porträts & Events Card -->
                     <div class="bg-white rounded-lg shadow-lg p-6">
-                        <img src="IMG_07-small.webp" data-src="IMG_07.webp" alt="Porträts & Events" class="lazy rounded-lg mb-4 w-full h-48 object-cover" width="600" height="400" loading="lazy">
+                        <img 
+                            src="IMG_07-small.webp" 
+                            srcset="IMG_07-small.webp 600w, IMG_07.webp 1200w" 
+                            sizes="(max-width: 768px) 100vw, 33vw" 
+                            alt="Porträts & Events" 
+                            class="lazy rounded-lg mb-4 w-full h-48 object-cover" 
+                            width="600" 
+                            height="400" 
+                            loading="lazy">
                         <h3 class="text-2xl font-bold text-gray-800">Porträts & Events</h3>
                         <p class="text-gray-700 mb-4">
                             Porträt- und Eventfotografie für jegliche Anlässe, um unvergessliche Momente festzuhalten.
@@ -208,13 +224,21 @@
                             <li>✔ Feiern</li>
                             <li>✔ Familienfotos</li>
                         </ul>
-                        <p class="mt-4 text-lg font-semibold">Preis: ab 299.-</p>
+                        <p class="mt-4 text-lg font-semibold">Preis: ab 299.- EUR</p>
                         <a href="#contact" class="mt-4 inline-block px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
                     </div>
 
                     <!-- Photoshop-Service Card -->
                     <div class="bg-white rounded-lg shadow-lg p-6">
-                        <img src="IMG_08-small.webp" data-src="IMG_08.webp" alt="Photoshop-Service" class="lazy rounded-lg mb-4 w-full h-48 object-cover" width="600" height="400" loading="lazy">
+                        <img 
+                            src="IMG_08-small.webp" 
+                            srcset="IMG_08-small.webp 600w, IMG_08.webp 1200w" 
+                            sizes="(max-width: 768px) 100vw, 33vw" 
+                            alt="Photoshop-Service" 
+                            class="lazy rounded-lg mb-4 w-full h-48 object-cover" 
+                            width="600" 
+                            height="400" 
+                            loading="lazy">
                         <h3 class="text-2xl font-bold text-gray-800">Photoshop-Service</h3>
                         <p class="text-gray-700 mb-4">
                             Retusche und Optimierung Ihrer Bilder, um das Beste aus jedem Foto herauszuholen.
@@ -224,7 +248,7 @@
                             <li>✔ Weboptimierung</li>
                             <li>✔ Bearbeitung</li>
                         </ul>
-                        <p class="mt-4 text-lg font-semibold">Preis: ab 19.- </p>
+                        <p class="mt-4 text-lg font-semibold">Preis: ab 19.- EUR</p>
                         <a href="#contact" class="mt-4 inline-block px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-red-500">Anfragen</a>
                     </div>
                 </div>
@@ -249,30 +273,77 @@
                 <div class="mt-10 grid grid-cols-2 md:grid-cols-4 gap-4">
                     <!-- Business Bilder -->
                     <div class="portfolio-item category-business">
-                        <img src="IMG_11-small.webp" data-src="IMG_11.webp" alt="Business Bild 1" class="lazy rounded-lg shadow-lg w-full max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img 
+                            src="IMG_11-small.webp" 
+                            srcset="IMG_11-small.webp 600w, IMG_11.webp 1200w" 
+                            sizes="(max-width: 768px) 100vw, 25vw" 
+                            alt="Business Bild 1" 
+                            class="lazy rounded-lg shadow-lg w-full h-40 md:h-80 object-cover" 
+                            width="600" 
+                            height="400" 
+                            loading="lazy">
                     </div>
                     <div class="portfolio-item category-business">
-                        <img src="IMG_06-small.webp" data-src="IMG_06.webp" alt="Business Bild 2" class="lazy rounded-lg shadow-lg w-full max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img 
+                            src="IMG_06-small.webp" 
+                            srcset="IMG_06-small.webp 600w, IMG_06.webp 1200w" 
+                            sizes="(max-width: 768px) 100vw, 25vw" 
+                            alt="Business Bild 2" 
+                            class="lazy rounded-lg shadow-lg w-full h-40 md:h-80 object-cover" 
+                            width="600" 
+                            height="400" 
+                            loading="lazy">
                     </div>
                     <!-- Porträts Bilder -->
                     <div class="portfolio-item category-portraits">
-                        <img src="IMG_09-small.webp" data-src="IMG_09.webp" alt="Porträt Bild 1" class="lazy rounded-lg shadow-lg w-full max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img 
+                            src="IMG_09-small.webp" 
+                            srcset="IMG_09-small.webp 600w, IMG_09.webp 1200w" 
+                            sizes="(max-width: 768px) 100vw, 25vw" 
+                            alt="Porträt Bild 1" 
+                            class="lazy rounded-lg shadow-lg w-full h-40 md:h-80 object-cover" 
+                            width="600" 
+                            height="400" 
+                            loading="lazy">
                     </div>
                     <div class="portfolio-item category-portraits">
-                        <img src="IMG_05-small.webp" data-src="IMG_05.webp" alt="Porträt Bild 2" class="lazy rounded-lg shadow-lg w-full max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img 
+                            src="IMG_05-small.webp" 
+                            srcset="IMG_05-small.webp 600w, IMG_05.webp 1200w" 
+                            sizes="(max-width: 768px) 100vw, 25vw" 
+                            alt="Porträt Bild 2" 
+                            class="lazy rounded-lg shadow-lg w-full h-40 md:h-80 object-cover" 
+                            width="600" 
+                            height="400" 
+                            loading="lazy">
                     </div>
                     <!-- Events Bilder -->
                     <div class="portfolio-item category-events">
-                        <img src="IMG_07-small.webp" data-src="IMG_07.webp" alt="Event Bild 1" class="lazy rounded-lg shadow-lg w-full max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img 
+                            src="IMG_07-small.webp" 
+                            srcset="IMG_07-small.webp 600w, IMG_07.webp 1200w" 
+                            sizes="(max-width: 768px) 100vw, 25vw" 
+                            alt="Event Bild 1" 
+                            class="lazy rounded-lg shadow-lg w-full h-40 md:h-80 object-cover" 
+                            width="600" 
+                            height="400" 
+                            loading="lazy">
                     </div>
                     <div class="portfolio-item category-events">
-                        <img src="IMG_08-small.webp" data-src="IMG_08.webp" alt="Event Bild 2" class="lazy rounded-lg shadow-lg w-full max-h-80 md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img 
+                            src="IMG_08-small.webp" 
+                            srcset="IMG_08-small.webp 600w, IMG_08.webp 1200w" 
+                            sizes="(max-width: 768px) 100vw, 25vw" 
+                            alt="Event Bild 2" 
+                            class="lazy rounded-lg shadow-lg w-full h-40 md:h-80 object-cover" 
+                            width="600" 
+                            height="400" 
+                            loading="lazy">
                     </div>
                     <!-- Weitere Bilder hinzufügen -->
                 </div>
             </div>
         </section>
-
 
 
         <!-- Kontakt Section -->
