--- a/index.html
+++ b/index.html
@@ -164,7 +164,15 @@
                     </div>
                     <!-- Bildbereich mit Lazy Loading -->
                     <div class="md:w-1/3 md:pl-6 mb-2 mt-6 md:mt-0 flex justify-center">
-                        <img src="IMG_05-small.webp" data-src="IMG_05.webp" alt="Fotograf" class="lazy rounded-lg shadow-lg w-full h-auto md:max-h-96 object-cover" width="600" height="400" loading="lazy">
+                        <img 
+                            src="IMG_05-small.webp" 
+                            srcset="IMG_05-small.webp 600w, IMG_05.webp 1200w" 
+                            sizes="(max-width: 768px) 100vw, 33vw" 
+                            alt="Fotograf" 
+                            class="lazy rounded-lg shadow-lg w-full h-auto md:max-h-96 object-cover" 
+                            width="600" 
+                            height="400" 
+                            loading="lazy">
                     </div>
                 </div>
             </div>
