--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
     <!-- Preload für LCP-Bild -->
     <link rel="preload" as="image" href="IMG_01.webp" type="image/webp">
+    <link rel="preload" as="image" href="IMG_02.webp" type="image/webp">
+    <link rel="preload" as="image" href="IMG_03.webp" type="image/webp">
+    <link rel="preload" as="image" href="IMG_004.webp" type="image/webp">
 
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; img-src 'self' data:; font-src 'self' https://cdnjs.cloudflare.com;">
 
@@ -83,7 +86,7 @@
                 <div class="grid grid-cols-2 gap-4 max-w-md mx-auto md:max-w-4xl">
                     <!-- Bilder mit Responsive und optimiertem Laden -->
                     <img 
-                        src="IMG_01.webp" 
+                        src="IMG_01-small.webp" 
                         srcset="IMG_01-small.webp 600w, IMG_01.webp 1200w" 
                         sizes="(max-width: 768px) 100vw, 50vw" 
                         alt="Bild 1" 
