index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     <!-- Preconnect für Performance -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
 
-    <!-- Preload für LCP-Bild -->
+    <!-- Preload des LCP-Bildes für Desktop -->
     <link rel="preload" as="image" href="IMG_01.webp" type="image/webp" crossorigin="anonymous">
 
+    <!-- Preload des LCP-Bildes für Mobile -->
+    <link rel="preload" as="image" href="IMG_01-small.webp" type="image/webp" media="(max-width: 768px)" crossorigin="anonymous">
     
 
     <!-- Smooth Scroll Behavior -->
