index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="grid grid-cols-2 gap-4 max-w-md mx-auto md:max-w-4xl">
                     <!-- LCP Bild -->
                     <img 
-                        src="IMG_01.webp" 
+                        src="IMG_01-small.webp" 
                         srcset="IMG_01-small.webp 600w, IMG_01.webp 1200w" 
                         sizes="(max-width: 768px) 100vw, 50vw" 
                         alt="Bild 1" 
