--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
         /* Weitere kritische Styles hier einfügen */
     </style>
 
-    <!-- Asynchronously load Font Awesome CSS -->
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" as="style" onload="this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></noscript>
-
     <!-- Tailwind CSS kompiliert und minimiert -->
     <link rel="stylesheet" href="styles.css?v=1.0">
 
@@ -409,17 +405,31 @@
                 <li><a href="impressum.html" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Impressum</a></li>
             </ul>
             <div class="mt-4 flex justify-center space-x-4">
-                <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Facebook">
+                    <!-- Inline SVG für Facebook -->
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                        <path d="M22.675 0h-21.35C.597 0 0 .597 0 1.325v21.351C0 23.403.597 24 1.325 24H12.82v-9.294H9.692V11.09h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.464.099 2.795.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796 1.765v2.313h3.587l-.467 3.616h-3.12V24h6.116C23.403 24 24 23.403 24 22.675V1.325C24 .597 23.403 0 22.675 0z"/>
+                    </svg>
+                </a>
+                <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Instagram">
+                    <!-- Inline SVG für Instagram -->
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.332 3.608 1.308.975.976 1.246 2.243 1.308 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.332 2.633-1.308 3.608-.976.975-2.243 1.246-3.608 1.308-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.332-3.608-1.308-.975-.976-1.246-2.243-1.308-3.608C2.175 15.747 2.163 15.367 2.163 12s.012-3.584.07-4.85c.062-1.366.332-2.633 1.308-3.608.976-.975 2.243-1.246 3.608-1.308C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.014 7.052.072 5.772.13 4.633.446 3.68 1.4c-.953.953-1.27 2.092-1.328 3.372C2.014 6.332 2 6.741 2 12s.014 5.668.072 6.948c.058 1.28.375 2.419 1.328 3.372.953.953 2.092 1.27 3.372 1.328C8.332 23.986 8.741 24 12 24s3.668-.014 4.948-.072c1.28-.058 2.419-.375 3.372-1.328.953-.953 1.27-2.092 1.328-3.372.058-1.28.072-1.689.072-6.948s-.014-5.668-.072-6.948c-.058-1.28-.375-2.419-1.328-3.372C18.367.446 17.228.13 15.948.072 14.668.014 14.259 0 12 0z"/>
+                        <path d="M12 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.999 3.999 0 110-7.998 3.999 3.999 0 010 7.998z"/>
+                        <circle cx="18.406" cy="5.595" r="1.439"/>
+                    </svg>
+                </a>
+                <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Twitter">
+                    <!-- Inline SVG für Twitter -->
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                        <path d="M23.954 4.569c-.885.392-1.83.656-2.825.775 1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 1.184-.897-.957-2.178-1.555-3.594-1.555-2.723 0-4.928 2.206-4.928 4.928 0 .386.044.762.127 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.423.722-.666 1.561-.666 2.475 0 1.708.87 3.213 2.188 4.096-.807-.026-1.566-.248-2.229-.616v.061c0 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 0-.615-.03-.916-.086.631 1.953 2.445 3.376 4.6 3.416-1.68 1.319-3.809 2.105-6.102 2.105-.394 0-.779-.023-1.17-.067 2.179 1.397 4.768 2.213 7.557 2.213 9.054 0 14-7.496 14-13.986 0-.21 0-.42-.015-.63.962-.695 1.8-1.562 2.46-2.549z"/>
+                    </svg>
+                </a>
             </div>
-        </div>
-    </footer>
-
+        </footer>
+    
     <!-- JavaScript für das Hamburger Menü und den Portfolio-Filter -->
     <script src="script.js" defer></script>
 
-    <!-- Asynchrones Laden von Font Awesome -->
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 </body>
 </html>
