--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="preload" as="image" href="IMG_01-small.webp" type="image/webp" media="(max-width: 768px)" crossorigin="anonymous">
     
     <!-- Content Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://vahidhrncic.github.io; style-src 'self' https://cdnjs.cloudflare.com; img-src 'self' https://vahidhrncic.github.io data:; font-src 'self'; connect-src 'self'; media-src 'self'; object-src 'none';">
+     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com; style-src 'self' https://cdnjs.cloudflare.com; img-src 'self' https://vahidhrncic.github.io data:; font-src 'self'; connect-src 'self'; media-src 'self'; object-src 'none';">
 
     <!-- Smooth Scroll Behavior -->
     <style>
@@ -59,7 +59,10 @@
             </nav>
             <div class="md:hidden">
                 <button id="menu-btn" class="text-gray-800 text-2xl focus:outline-none" aria-label="Menü" aria-expanded="false" aria-controls="mobile-menu">
-                    <i class="fas fa-bars"></i>
+                    <!-- Inline SVG für Hamburger-Icon -->
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                        <path d="M4 5h16M4 12h16M4 19h16" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                    </svg>
                 </button>
             </div>
         </div>
