--- a/index.html
+++ b/index.html
@@ -392,25 +392,26 @@
         </section>
     </main>
 
-    <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-8" role="contentinfo">
-        <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2024 ND Photography. Alle Rechte vorbehalten.</p>
-            <ul class="mt-4 flex flex-col md:flex-row justify-center space-y-2 md:space-y-0 md:space-x-4">
-                <li><a href="#hero" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Home</a></li>
-                <li><a href="#about" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Über mich</a></li>
-                <li><a href="#services" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Services</a></li>
-                <li><a href="#portfolio" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Portfolio</a></li>
-                <li><a href="#contact" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Kontakt</a></li>
-                <li><a href="impressum.html" class="hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500">Impressum</a></li>
-            </ul>
-            <div class="mt-4 flex justify-center space-x-4">
+<footer class="bg-gray-800 text-white py-8" role="contentinfo">
+    <div class="container mx-auto px-4 text-center">
+        <p>&copy; 2024 ND Photography. Alle Rechte vorbehalten.</p>
+        <ul class="mt-4 flex flex-col md:flex-row justify-center space-y-2 md:space-y-0 md:space-x-4">
+            <li>
                 <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Facebook">
                     <!-- Inline SVG für Facebook -->
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
-                        </svg>
+                        <path d="M22.675 0h-21.35C.597 0 0 .597 0 
+                                 1.325v21.351C0 23.403.597 24 1.325 
+                                 24H12.82v-9.294H9.692V11.09h3.128V8.413c0-3.1 
+                                 1.893-4.788 4.659-4.788 1.325 0 2.464.099 
+                                 2.795.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796 
+                                 1.765v2.313h3.587l-.467 3.616h-3.12V24h6.116C23.403 
+                                 24 24 23.403 24 22.675V1.325C24 .597 23.403 0 
+                                 22.675 0z"/>
+                    </svg>
                 </a>
+            </li>
+            <li>
                 <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Instagram">
                     <!-- Inline SVG für Instagram -->
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -419,14 +420,33 @@
                         <circle cx="18.406" cy="5.595" r="1.439"/>
                     </svg>
                 </a>
+            </li>
+            <li>
                 <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Twitter">
                     <!-- Inline SVG für Twitter -->
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                        <path d="M23.954 4.569c-.885.392-1.83.656-2.825.775 1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 1.184-.897-.957-2.178-1.555-3.594-1.555-2.723 0-4.928 2.206-4.928 4.928 0 .386.044.762.127 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.423.722-.666 1.561-.666 2.475 0 1.708.87 3.213 2.188 4.096-.807-.026-1.566-.248-2.229-.616v.061c0 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 0-.615-.03-.916-.086.631 1.953 2.445 3.376 4.6 3.416-1.68 1.319-3.809 2.105-6.102 2.105-.394 0-.779-.023-1.17-.067 2.179 1.397 4.768 2.213 7.557 2.213 9.054 0 14-7.496 14-13.986 0-.21 0-.42-.015-.63.962-.695 1.8-1.562 2.46-2.549z"/>
+                        <path d="M23.954 4.569c-.885.392-1.83.656-2.825.775 
+                                 1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 
+                                 1.184-.897-.957-2.178-1.555-3.594-1.555-2.723 
+                                 0-4.928 2.206-4.928 4.928 0 .386.044.762.127 
+                                 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.423.722-.666 
+                                 1.561-.666 2.475 0 1.708.87 3.213 2.188 
+                                 4.096-.807-.026-1.566-.248-2.229-.616v.061c0 
+                                 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 
+                                 0-.615-.03-.916-.086.631 1.953 2.445 3.376 
+                                 4.6 3.416-1.68 1.319-3.809 2.105-6.102 
+                                 2.105-.394 0-.779-.023-1.17-.067 
+                                 2.179 1.397 4.768 2.213 7.557 2.213 
+                                 9.054 0 14-7.496 14-13.986 
+                                 0-.21 0-.42-.015-.63.962-.695 
+                                 1.8-1.562 2.46-2.549z"/>
                     </svg>
                 </a>
-            </div>
-        </footer>
+            </li>
+        </ul>
+    </div>
+</footer>
+
     
     <!-- JavaScript für das Hamburger Menü und den Portfolio-Filter -->
     <script src="script.js" defer></script>
