--- a/index.html
+++ b/index.html
@@ -398,10 +398,19 @@
         <ul class="mt-4 flex flex-col md:flex-row justify-center space-y-2 md:space-y-0 md:space-x-4">
             <li>
                 <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Facebook">
-                    <!-- Inline SVG für Facebook -->
-                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg>
-                    
-                </a>
+    <!-- Inline SVG für Facebook -->
+    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M22.675 0h-21.35C.597 0 0 .597 0 
+                 1.325v21.351C0 23.403.597 24 1.325 
+                 24H12.82v-9.294H9.692V11.09h3.128V8.413c0-3.1 
+                 1.893-4.788 4.659-4.788 1.325 0 2.464.099 
+                 2.795.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796 
+                 1.765v2.313h3.587l-.467 3.616h-3.12V24h6.116C23.403 
+                 24 24 23.403 24 22.675V1.325C24 .597 23.403 0 
+                 22.675 0z"/>
+    </svg>
+</a>
+
             </li>
             <li>
                 <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Instagram">
