--- a/index.html
+++ b/index.html
@@ -392,61 +392,65 @@
         </section>
     </main>
 
-<footer class="bg-gray-800 text-white py-8" role="contentinfo">
-    <div class="container mx-auto px-4 text-center">
-        <p>&copy; 2024 ND Photography. Alle Rechte vorbehalten.</p>
-        <ul class="mt-4 flex flex-col md:flex-row justify-center space-y-2 md:space-y-0 md:space-x-4">
-            <li>
-                <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Facebook">
-    <!-- Inline SVG für Facebook -->
-    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-        <path d="M22.675 0h-21.35C.597 0 0 .597 0 
-                 1.325v21.351C0 23.403.597 24 1.325 
-                 24H12.82v-9.294H9.692V11.09h3.128V8.413c0-3.1 
-                 1.893-4.788 4.659-4.788 1.325 0 2.464.099 
-                 2.795.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796 
-                 1.765v2.313h3.587l-.467 3.616h-3.12V24h6.116C23.403 
-                 24 24 23.403 24 22.675V1.325C24 .597 23.403 0 
-                 22.675 0z"/>
-    </svg>
-</a>
-
-            </li>
-            <li>
-                <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Instagram">
-                    <!-- Inline SVG für Instagram -->
-                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.332 3.608 1.308.975.976 1.246 2.243 1.308 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.332 2.633-1.308 3.608-.976.975-2.243 1.246-3.608 1.308-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.332-3.608-1.308-.975-.976-1.246-2.243-1.308-3.608C2.175 15.747 2.163 15.367 2.163 12s.012-3.584.07-4.85c.062-1.366.332-2.633 1.308-3.608.976-.975 2.243-1.246 3.608-1.308C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.014 7.052.072 5.772.13 4.633.446 3.68 1.4c-.953.953-1.27 2.092-1.328 3.372C2.014 6.332 2 6.741 2 12s.014 5.668.072 6.948c.058 1.28.375 2.419 1.328 3.372.953.953 2.092 1.27 3.372 1.328C8.332 23.986 8.741 24 12 24s3.668-.014 4.948-.072c1.28-.058 2.419-.375 3.372-1.328.953-.953 1.27-2.092 1.328-3.372.058-1.28.072-1.689.072-6.948s-.014-5.668-.072-6.948c-.058-1.28-.375-2.419-1.328-3.372C18.367.446 17.228.13 15.948.072 14.668.014 14.259 0 12 0z"/>
-                        <path d="M12 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.999 3.999 0 110-7.998 3.999 3.999 0 010 7.998z"/>
-                        <circle cx="18.406" cy="5.595" r="1.439"/>
-                    </svg>
-                </a>
-            </li>
-            <li>
-                <a href="#" class="text-xl hover:text-red-500 focus:outline-none focus:ring-2 focus:ring-red-500" aria-label="Twitter">
-                    <!-- Inline SVG für Twitter -->
-                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                        <path d="M23.954 4.569c-.885.392-1.83.656-2.825.775 
-                                 1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 
-                                 1.184-.897-.957-2.178-1.555-3.594-1.555-2.723 
-                                 0-4.928 2.206-4.928 4.928 0 .386.044.762.127 
-                                 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.423.722-.666 
-                                 1.561-.666 2.475 0 1.708.87 3.213 2.188 
-                                 4.096-.807-.026-1.566-.248-2.229-.616v.061c0 
-                                 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 
-                                 0-.615-.03-.916-.086.631 1.953 2.445 3.376 
-                                 4.6 3.416-1.68 1.319-3.809 2.105-6.102 
-                                 2.105-.394 0-.779-.023-1.17-.067 
-                                 2.179 1.397 4.768 2.213 7.557 2.213 
-                                 9.054 0 14-7.496 14-13.986 
-                                 0-.21 0-.42-.015-.63.962-.695 
-                                 1.8-1.562 2.46-2.549z"/>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-    </div>
-</footer>
+    <!-- Footer -->
+    <footer style="background-color: #2d3748; color: #ffffff; padding: 20px 0;" role="contentinfo">
+        <div style="max-width: 1200px; margin: 0 auto; text-align: center;">
+            <p>&copy; 2024 ND Photography. Alle Rechte vorbehalten.</p>
+            <ul style="list-style: none; padding: 0; margin: 20px 0; display: flex; justify-content: center; gap: 20px;">
+                <li>
+                    <a href="#" aria-label="Facebook" style="display: inline-block; width: 24px; height: 24px;">
+                        <!-- Facebook SVG -->
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="24" height="24" fill="currentColor">
+                            <!--! Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free -->
+                            <path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" aria-label="Instagram" style="display: inline-block; width: 24px; height: 24px;">
+                        <!-- Instagram SVG -->
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="24" height="24" fill="currentColor">
+                            <!--! Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free -->
+                            <path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" aria-label="Twitter" style="display: inline-block; width: 24px; height: 24px;">
+                        <!-- Twitter SVG -->
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="24" height="24" fill="currentColor">
+                            <!--! Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free -->
+                            <path d="M459.4 4.569c-.885.392-1.83.656-2.825.775 
+                                     1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 
+                                     1.184-.897-.957-2.178-1.555-3.594-1.555-2.723 
+                                     0-4.928 2.206-4.928 4.928 0 .386.044.762.127 
+                                     1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.423.722-.666 
+                                     1.561-.666 2.475 0 1.708.87 3.213 2.188 
+                                     4.096-.807-.026-1.566-.248-2.229-.616v.061c0 
+                                     2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 
+                                     0-.615-.03-.916-.086.631 1.953 2.445 3.376 
+                                     4.6 3.416-1.68 1.319-3.809 2.105-6.102 
+                                     2.105-.394 0-.779-.023-1.17-.067 
+                                     2.179 1.397 4.768 2.213 7.557 2.213 
+                                     9.054 0 14-7.496 14-13.986 
+                                     0-.21 0-.42-.015-.63.962-.695 
+                                     1.8-1.562 2.46-2.549z"/>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" aria-label="Hamburger-Menü" style="display: inline-block; width: 24px; height: 24px;">
+                        <!-- Hamburger-Menü SVG -->
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512" width="24" height="24" fill="currentColor">
+                            <!--! Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free -->
+                            <path d="M64 360a56 56 0 1 0 0 112 56 56 0 1 0 0-112zm0-160a56 56 0 1 0 0 112 56 56 0 1 0 0-112zM120 96A56 56 0 1 0 8 96a56 56 0 1 0 112 0z"/>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+            <!-- Optional: Weitere Footer-Inhalte wie zusätzliche Links oder Informationen -->
+        </div>
+    </footer>
 
     
     <!-- JavaScript für das Hamburger Menü und den Portfolio-Filter -->
